# Sherlog

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  demo.tape  docker-compose.yml  pyproject.toml
data/eval/: cases.json  gate_bench.json
data/eval/code_rooted/01_mutable_default/: meta.json
data/eval/code_rooted/01_mutable_default/repo/: cart.py  test_cart.py
data/eval/code_rooted/02_falsy_zero/: meta.json
data/eval/code_rooted/02_falsy_zero/repo/: inventory.py  test_inventory.py
data/eval/code_rooted/03_bool_operator/: meta.json
data/eval/code_rooted/04_rounding/: meta.json
data/eval/code_rooted/05_off_by_one/: meta.json
data/eval/code_rooted/06_int_division/: meta.json
data/eval/code_rooted/07_missing_return/: meta.json
data/eval/code_rooted/08_boundary_operator/: meta.json
data/eval/code_rooted/09_inplace_mutation/: meta.json
data/eval/code_rooted/10_string_concat/: meta.json
data/eval/code_rooted/11_range_off_by_one/: meta.json
data/eval/code_rooted/12_wrong_index/: meta.json
data/incidents/: seed.json
examples/buggy_calculator/: calculator.py  test_calculator.py
scripts/: init_db.sql  seed_incidents.py
src/sherlog/: __init__.py  cli.py  config.py  db.py  embeddings.py  graph.py  llm.py  mcp_client.py  mcp_server.py  state.py  verify.py
src/sherlog/agents/: __init__.py  critic.py  diagnostician.py  fix_proposer.py  ingest.py  reporter.py  retriever.py  verifier.py
src/sherlog/eval/: __init__.py  judge.py  run.py  run_gates.py  run_grounded.py
tests/: test_mcp_tools.py  test_nodes.py  test_verify.py
(+20 files in other folders)
