[project]
name = "sherlog"
version = "0.1.0"
description = "Multi-agent log diagnosis: finds root cause, proposes fixes, and self-verifies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kqiu10" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.0",
    "fastembed>=0.4.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
sherlog = "sherlog.cli:app"

[project.optional-dependencies]
# Core eval: LLM-as-judge accuracy + self-correction ablation.
eval = [
    "deepeval>=1.0",
]
# Retrieval-quality metrics (heavier deps); install separately when needed.
eval-ragas = [
    "ragas>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sherlog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer/FastAPI intentionally call Argument()/Option() in parameter defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
